force-app/main/default/objects/Partner_Tier__mdt/Partner_Tier__mdt.object-meta.xml
<CustomObject>
    <label>Partner Tier</label>
    <pluralLabel>Partner Tiers</pluralLabel>
</CustomObject>