force-app/main/default/objects/Partner_Tier__mdt/fields/Badge_Name__c.field-meta.xml
<CustomField>
    <fullName>Badge_Name__c</fullName>
    <description>Badge name displayed for partners in this tier.</description>
    <label>Badge Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>