force-app/main/default/objects/Partner_Tier__mdt/fields/Lead_Priority__c.field-meta.xml
<CustomField>
    <fullName>Lead_Priority__c</fullName>
    <description
  >Lead assignment priority for partners in this tier.</description>
    <label>Lead Priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>