force-app/main/default/objects/Partner_Tier__mdt/fields/MDF_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>MDF_Multiplier__c</fullName>
    <description>MDF multiplier applied for partners in this tier.</description>
    <label>MDF Multiplier</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>