force-app/main/default/objects/Partner_Tier__mdt/fields/Minimum_Score__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Score__c</fullName>
    <label>Minimum Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>